--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "barryvdh/laravel-ide-helper": "^2.4",
+        "adldap2/adldap2-laravel": "^3.0",
         "arcanedev/log-viewer": "^4.3.9",
+        "barryvdh/laravel-ide-helper": "^2.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "pda/pheanstalk": "~3.0",
