--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "adldap2/adldap2-laravel": "^3.0",
         "arcanedev/log-viewer": "^4.3.9",
         "barryvdh/laravel-ide-helper": "^2.4",
+        "jenssegers/mongodb": "v3.2.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "pda/pheanstalk": "~3.0",
